# linear-algebra-C

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  matrix.h  test_matrix
include/: matrix.h
src/: matrix.c
tests/: test_matrix.c
